--- a/BetterThanTelly/app/views/layouts/application.html.erb
+++ b/BetterThanTelly/app/views/layouts/application.html.erb
@@ -10,6 +10,15 @@
   </head>
 
   <body>
+  <nav>
+  <%= link_to "All Events", events_path %> | <%= link_to "View venues", venues_path %> | <%= link_to "Create an event", new_event_path %> | <%= link_to "View reviews", reviews_path %> | 
+  <% if logged_in? %>
+    <%= link_to "Your profile", user_path(session[:user_id]) %>  <%= link_to "Logout", logout_path, method: :post %>
+  <% else %>
+    <%= link_to "Log in", login_path %> or <%= link_to "Sign up", new_user_path %>
+  <% end %>
+  </nav>
+
     <%= yield %>
   </body>
 </html>
