--- a/BetterThanTelly/app/views/events/new.html.erb
+++ b/BetterThanTelly/app/views/events/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create an event</h1>
 
 <% if !logged_in? %>
-Hello! Please <%= link_to "Log in", login_path %>
+Please <%= link_to "log in", login_path %> to create an event
 <% else %>
 
     <%= form_for(@event) do |f| %>
