--- a/BetterThanTelly/app/views/venues/show.html.erb
+++ b/BetterThanTelly/app/views/venues/show.html.erb
@@ -1,7 +1,13 @@
 <h1><%= @venue.name %></h1>
 <p>address: <%= @venue.address %></p>
 
-Upcoming Events at this venue
+<h4>Upcoming Events at this venue</h4>
+<ul>
+<% @venue.events.each do |event|  %>
+<li><%= link_to event.title, event_path(event) %></li>
+<% end %>
+</ul>
 
 
-Previous events at this venue
+<h4>Previous events at this venue</h4>
+
