--- a/BetterThanTelly/app/views/reviews/new.html.erb
+++ b/BetterThanTelly/app/views/reviews/new.html.erb
@@ -1,2 +1,20 @@
 <h1>Write a review</h1>
 
+<ul>
+    <%= form_for(@review) do |f| %>
+    <%= f.hidden_field :user_id, :value=> session[:user_id] %>
+    <%= f.hidden_field :event_id, :value=> params[:id] %>
+
+      
+      <li> <p> <%= f.label :title %></p>
+        <%= f.text_field :title %>  </li>
+
+      <li> <p><%= f.label :content %> </p>
+        <%= f.text_area :content %> </li> 
+
+     <li> <p> <%= f.label :rating %> </p> 
+            <%= f.number_field :rating %>    
+
+    <%= f.submit %>
+<% end %>
+  </ul>
