chekc if git is working as intended

--- a/BetterThanTelly/app/views/users/show.html.erb
+++ b/BetterThanTelly/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <h1>Welcome to your user homepage, <%= @user.name %></h1>
 
+Test if git works
+
 <%= link_to "Edit your account", edit_user_path(@user) %>
 
 <h4>Future Events you are going to</h4>
