--- a/BetterThanTelly/app/views/events/show.html.erb
+++ b/BetterThanTelly/app/views/events/show.html.erb
@@ -15,40 +15,26 @@
 <h4>Time</h4>
 <p><%= @event.event_time.strftime("%H:%M") %></p>
 
-<br>
 
-<% if @event.user.id == session[:user_id] %>
+<div>
+<% if @event.event_in_future? && @event.user.id == session[:user_id] %>
     <p>This is your event!</p>
-    <%= link_to "Edit this event", edit_event_path %>
-<% elsif @event.users.include?(session[:user_id]) %>
+    <%= link_to "Edit this event", edit_event_path %>    
+<% elsif @event.event_in_future? && @event.users.find_by(id: session[:user_id]) %>
     <p>You're going to this event!</p>
-    Cancel attendance
+<% elsif @event.event_in_future? && @event.user.id != @current_user.id %>
+   <%= button_to 'Attend this event', {:controller => "event_attendees", :action => "create", :event_id => @event.id, :user_id=> session[:user_id]}, :method=>:post  %>
+<% elsif !@event.event_in_future? && @event.users.find_by(id: session[:user_id]) %>
+    <p>We hope you enjoyed attending!</p>
+   <%= link_to "Leave a review about this event", new_review_path %>
+   <%= link_to "Read other reviews about this event", reviews_path %>
+<% elsif !@event.event_in_future? %>
+    <p>This event has passed</p>
+    <%= link_to "Read reviews about this event", reviews_path %>
 <% else %>
-    <%= button_to 'Attend this event', {:controller => "event_attendees", :action => "create", :event_id => @event.id, :user_id=> session[:user_id]} , :method=>:post  %>
+    :)
 <% end %>
 
-<%= @event.users.include?(@current_user) %>
-<%= @event.event_in_future? %>
-<%= @event.attendance? %>
+</div>
 
 
-<br><br><br><br>
-
-This event belongs to you (you are the host) && this event is in the future
-LINK EDIT EVENT
-
-This event is in the future && you are attending
-YOU'RE GOING TO THIS EVENT
-
-This event is in the future && you are neither the host or attending
-BUTTON ATTEND THIS EVENT
-
-This event is in the past && you are the host
-READ REVIEWS
-
-This event is oin the past && you are not the host
-READ REVIEWS | LEAVE A REVIEW
-
-
-
-<%= link_to "Leave a review about this event", new_review_path %>
