--- a/BetterThanTelly/app/views/venues/new.html.erb
+++ b/BetterThanTelly/app/views/venues/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Make a new Venue</h1>
 
+
 <%= form_for(@venue) do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name  %> 
@@ -10,3 +11,14 @@
     <%= f.submit %>
 <% end %>
   
+  <% flash.each do |name, messages| %>
+  <div class="alert alert-<%= name %>">
+
+  <ul>
+  <% messages.each do |message| %>
+    <li><%= message %></li>
+  <% end %>
+  </ul>
+
+  </div>
+<% end %>
