flash errors added to new venue, user, event

--- a/BetterThanTelly/app/views/events/new.html.erb
+++ b/BetterThanTelly/app/views/events/new.html.erb
@@ -29,6 +29,17 @@ Please <%= link_to "log in", login_path %> to create an event
     <%= f.submit %>
 <% end %>
   
+<% end %>
 
 
+  <% flash.each do |name, messages| %>
+  <div class="flash-errors">
+
+  <ul>
+  <% messages.each do |message| %>
+    <li><%= message %></li>
+  <% end %>
+  </ul>
+
+  </div>
 <% end %>
