--- a/BetterThanTelly/app/views/venues/new.html.erb
+++ b/BetterThanTelly/app/views/venues/new.html.erb
@@ -12,7 +12,7 @@
 <% end %>
   
   <% flash.each do |name, messages| %>
-  <div class="alert alert-<%= name %>">
+  <div class="flash-errors">
 
   <ul>
   <% messages.each do |message| %>
