wrapped forms in new-form div class

--- a/BetterThanTelly/app/views/events/new.html.erb
+++ b/BetterThanTelly/app/views/events/new.html.erb
@@ -4,6 +4,7 @@
 Please <%= link_to "log in", login_path %> to create an event
 <% else %>
 
+<div class="new-form">
     <%= form_for(@event) do |f| %>
         
         <%= f.hidden_field :user_id, :value=> session[:user_id] %>
@@ -28,7 +29,7 @@ Please <%= link_to "log in", login_path %> to create an event
 
     <%= f.submit %>
 <% end %>
-  
+  </div>
 <% end %>
 
 
