does not show edit link for reviews not created

--- a/BetterThanTelly/app/views/reviews/show.html.erb
+++ b/BetterThanTelly/app/views/reviews/show.html.erb
@@ -10,4 +10,7 @@
 
 <p>Review written on: <%= @review.created_at.strftime("%B %-d, %Y") %></p>
 
-<%= link_to "Edit this review", edit_review_path(@review) %>
+<% if @review.user_id == session[:user_id] %>
+    <%= link_to "Edit this review", edit_review_path(@review) %>
+
+<% end %>
