--- a/BetterThanTelly/app/views/events/show.html.erb
+++ b/BetterThanTelly/app/views/events/show.html.erb
@@ -24,13 +24,14 @@
     <p>You're going to this event!</p>
 <% elsif @event.event_in_future? && @event.user.id != @current_user.id %>
    <%= button_to 'Attend this event', {:controller => "event_attendees", :action => "create", :event_id => @event.id, :user_id=> session[:user_id]}, :method=>:post  %>
-<% elsif !@event.event_in_future? && @event.users.find_by(id: session[:user_id]) %>
-    <p>We hope you enjoyed attending!</p>
-   <%= link_to "Leave a review about this event", new_review_path %>
-   <%= link_to "Read other reviews about this event", reviews_path %>
 <% elsif !@event.event_in_future? %>
-    <p>This event has passed</p>
-    <%= link_to "Read reviews about this event", reviews_path %>
+    <p>See reviews:</p>
+    <% @event.reviews.each do |review| %>
+    <%= review.rating %> | <%= link_to review.title, review_path(review) %>
+    
+    <% end %>
+    
+
 <% else %>
     :)
 <% end %>
