--- a/BetterThanTelly/app/views/events/edit.html.erb
+++ b/BetterThanTelly/app/views/events/edit.html.erb
@@ -1,4 +1,8 @@
-<h1>Edit <%= @event.title %></h1>
+<div class="row">
+    <div class="col-12">
+      <h1>Edit <%= @event.title %></h1>
+    </div>
+</div>
 
 <ul>
     <%= form_for(@event) do |f| %>
