--- a/BetterThanTelly/app/views/categories/index.html.erb
+++ b/BetterThanTelly/app/views/categories/index.html.erb
@@ -1,7 +1,13 @@
-<ul>
-<% @categories.each do |category| %>
+<div class="row">
+    <div class="col-12">
+        <h1>Categories</h1>
+    </div>
+</div>
 
-<li><%= link_to category.name, category_path(category) %></li>
-
-<% end %>
-</ul>
+<div class="flex-container">
+    <% @categories.each do |category| %>
+       <div> 
+       <p> <%= link_to category.name, category_path(category) %></p>
+       </div>
+    <% end %>
+</div>
