--- a/BetterThanTelly/app/views/events/show.html.erb
+++ b/BetterThanTelly/app/views/events/show.html.erb
@@ -1,41 +1,48 @@
+<div class="row">
+<div class="col-12">
+    <h1 id="event-name"><%= @event.title %></h1>
+        <p><%= @event.description %></p>
+</div>
+</div>
 
-<h1><%= @event.title %></h1>
-<p>Category: <%= link_to @event.category.name, category_path(@event.category) %></p>
-
-<p><%= @event.description %></p>
-<p>Hosted by: <%= @event.user.name %></p>
-
-<h4>Location:</h4>
-<p><%= link_to @event.venue.name, venue_path(@event.venue) %></p>
-<p><%= @event.venue.address %></p>
-
-<h4>Date</h4>
-<p><%= @event.event_date.strftime("%A %-d %B %Y") %></p>
-
-<h4>Time</h4>
-<p><%= @event.event_time.strftime("%H:%M") %></p>
-
-
+<div class="flex-container">
 <div>
-<% if @event.event_in_future? && @event.user.id == session[:user_id] %>
-    <p>This is your event!</p>
-    <%= link_to "Edit this event", edit_event_path %>    
-<% elsif @event.event_in_future? && @event.users.find_by(id: session[:user_id]) %>
-    <p>You're going to this event!</p>
-<% elsif @event.event_in_future? && @event.user.id != @current_user.id %>
-   <%= button_to 'Attend this event', {:controller => "event_attendees", :action => "create", :event_id => @event.id, :user_id=> session[:user_id]}, :method=>:post  %>
-<% elsif !@event.event_in_future? %>
-    <p>See reviews:</p>
-    <% @event.reviews.each do |review| %>
-    <%= review.rating %> | <%= link_to review.title, review_path(review) %>
-    
-    <% end %>
-    
-
-<% else %>
-    :)
-<% end %>
+    <p>Hosted by: <%= @event.user.name %></p>
+    <p>Category: <%= link_to @event.category.name, category_path(@event.category) %></p>
 
 </div>
 
+<div>
+    <h4>Location:</h4>
+    <p><%= link_to @event.venue.name, venue_path(@event.venue) %></p>
+    <p><%= @event.venue.address %></p>
+</div>
+
+<div>
+    <h4>Date</h4>
+    <p><%= @event.event_date.strftime("%A %-d %B %Y") %></p>
+
+    <h4>Time</h4>
+    <p><%= @event.event_time.strftime("%H:%M") %></p>
+</div>
+
+<div>
+    <% if @event.event_in_future? && @event.user.id == session[:user_id] %>
+        <p>This is your event!</p>
+        <p><%= link_to "Edit this event", edit_event_path %></p>  
+    <% elsif @event.event_in_future? && @event.users.find_by(id: session[:user_id]) %>
+        <p>You're going to this event!</p>
+    <% elsif @event.event_in_future? && @event.user.id != @current_user.id %>
+    <%= button_to 'Attend this event', {:controller => "event_attendees", :action => "create", :event_id => @event.id, :user_id=> session[:user_id]}, :method=>:post  %>
+    <% elsif !@event.event_in_future? %>
+        <p>See reviews:</p>
+        <% @event.reviews.each do |review| %>
+        <%= review.rating %> | <%= link_to review.title, review_path(review) %>
+         <% end %>
+    <% else %>
+        :)
+    <% end %>
+
+</div>
+</div>
 
