--- a/BetterThanTelly/app/views/venues/index.html.erb
+++ b/BetterThanTelly/app/views/venues/index.html.erb
@@ -1,12 +1,16 @@
-<h1>Venues</h1>
+<div class="row">
+    <div class="col-12">
+        <h1>Venues</h1>
+        <p><%= link_to "Make a new venue", new_venue_path %></p>
+    </div>
+</div>
 
-<ul>
-<% @venues.each do |venue| %>
-<li><%= link_to venue.name, venue_path(venue) %></li>
-
-<% end %>
-
-</ul>
+<div class="flex-container">
+    <% @venues.each do |venue| %>
+       <div class="col-6"><h3><%= link_to venue.name, venue_path(venue) %></h3></div>
+    <% end %>
+</div>
 
 
-<%= link_to "Make a new venue", new_venue_path %>
+
+
