Added filtering on event homepage (updated controller and model)

--- a/BetterThanTelly/app/assets/stylesheets/application.css
+++ b/BetterThanTelly/app/assets/stylesheets/application.css
@@ -14,6 +14,9 @@
  *= require_self
  */
 
+
+ /* NAV */
+
  .nav{
     background-color: #333447;
     margin: 0;
@@ -31,27 +34,35 @@
  }
 
  .nav a:hover {
-    background-color: #408fff;
+    color: #408fff;
  }
 
  /* CONTAINERS */
 
  .flex-container {
-    width: 95%;
+    width: 99%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-direction: row;
     margin: 10px;
  }
 
  .block-container {
     display: inline-block;
+    padding: 10px;
     flex-wrap: wrap;
-    margin-left: auto;
-    margin-right: auto;
+    /*margin: auto;*/
     justify-content: space-evenly;
+    width: 33%;
+    border: 1px solid black;
     max-width: 400px;
+ }
+
+ .title-container {
+    display: inline-block;
+    align-self: flex-start;
+    margin-right: 0;
  }
 
 
@@ -66,6 +77,11 @@
     cursor: pointer;
 }
 
+.select {
+    background-color: #333447;
+
+}
+
 textfield {
     width: 300px;
 }
@@ -78,4 +94,15 @@ textarea {
     color: white;
     margin: 4px;
     padding: 16px;
+}
+
+a.buttonlink {
+    background-color:  #333447;
+    border: none;
+    color: white;
+    font-size: 12px;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
 }
