--- a/BetterThanTelly/app/views/users/show.html.erb
+++ b/BetterThanTelly/app/views/users/show.html.erb
@@ -6,8 +6,9 @@
 </div>
 
 <div class="flex-container">
+    <div class="title-container">
     <h4>Future Events you are going to</h4>
-    
+    </div>
         <div class="block-container">
         <% if @future_events == []  %>
             <p>You're not going to any events. <%= link_to "Find something to attend!", events_path %></p> 
@@ -23,7 +24,7 @@
 <div class="flex-container">
     <h4>Future Events you are hosting</h4>
     
-    <div class="box-container">
+    <div class="block-container">
     <% if @hosting_future == []  %>
         <p>You're not hosting any events. <%= link_to "Host an event!", new_event_path %></p>
     <% else %>
@@ -38,7 +39,7 @@
 
 <div class="flex-container">
     <h4>Past events you have attended</h4>
-    <div class="box-container">
+    <div class="block-container">
     <% if @past_events == []  %>
         You have not attended any events. 
     <% else %>
@@ -54,7 +55,7 @@
 <div class="flex-container">
 <h4>Past events you have hosted</h4>
 
-    <div class="box-container">
+    <div class="block-container">
     <% if @hosting_past == []  %>
         You have not hosted any events
     <% else %>
@@ -69,7 +70,7 @@
 <hr>
 <div class="flex-container">
 <h4>Recommended events for you</h4>
-    <div class="box-container">
+    <div class="block-container">
     <!-- logic stuff here -->
 
     </div>
