--- a/BetterThanTelly/app/views/reviews/edit.html.erb
+++ b/BetterThanTelly/app/views/reviews/edit.html.erb
@@ -1,21 +1,25 @@
+<div class="row">
+  <div class="col-12">
+    <h1>Edit <%= @review.title %></h1>
+  </div>
+</div>
 
-<h1>Edit <%= @review.title %></h1>
+<div class="flex-container">
+  <div class="block-container">
+    <%= form_for(@review) do |f| %>     
+     <h4> <%= f.label :title %> </h4>
+      <%= f.text_field :title %>  
 
-<ul>
-    <%= form_for(@review) do |f| %>
-        
-      <li> <p> <%= f.label :title %></p>
-        <%= f.text_field :title %>  </li>
-
-      <li> <p><%= f.label :content %> </p>
-        <%= f.text_area :content %> </li> 
-
-     <li> <p> <%= f.label :rating %> </p> 
-            <%= f.number_field :rating %>    
-
+      <h4><%= f.label :content %></h4>
+      <%= f.text_area :content %> 
+      
+      <h4><%= f.label :rating %> </h4>
+      <%= f.number_field :rating %>
     <%= f.submit %>
-<% end %>
-  </ul>
+    <% end %>
+  
 
   <h4>Delete review?</h4>
-  <%= link_to 'Delete review', @review, { method: 'delete', data: {confirm: 'Are you sure?'} } %>
+  <p><%= link_to 'Delete review', @review, { method: 'delete', data: {confirm: 'Are you sure?'}, :class=>"buttonlink" } %></p>
+  </div>
+</div>
