--- a/BetterThanTelly/app/views/categories/index.html.erb
+++ b/BetterThanTelly/app/views/categories/index.html.erb
@@ -6,7 +6,7 @@
 
 <div class="flex-container">
     <% @categories.each do |category| %>
-       <div> 
+       <div class="block-container"> 
        <p> <%= link_to category.name, category_path(category) %></p>
        </div>
     <% end %>
