--- a/BetterThanTelly/app/views/categories/show.html.erb
+++ b/BetterThanTelly/app/views/categories/show.html.erb
@@ -1,7 +1,6 @@
 <div class="row">
     <div class="col-12">
         <h1><%= @category.name %></h1>
-        <p>All events</p>
     </div>
 </div>
 
@@ -9,8 +8,8 @@
 
 <div class="flex-container">
     <% @category.events.each do |event| %>
-      <div> 
-      <h4> <%= link_to event.title, event_path(event) %></h4>
+      <div class="block-container"> 
+        <h4> <%= link_to event.title, event_path(event) %></h4>
       </div>
 
     <% end %>
