--- a/BetterThanTelly/app/views/reviews/index.html.erb
+++ b/BetterThanTelly/app/views/reviews/index.html.erb
@@ -5,10 +5,10 @@
 </div>
 
 
-<div class="row">
+<div class="flex-container">
     <% @reviews.each do |review| %>
-        <div class="col-4">    
-        <h4>"<%= link_to review.title, review_path(review) %>"</h4>
+        <div class="block-container">    
+        <h2>"<%= link_to review.title, review_path(review) %>"</h2>
         <p><%= link_to review.event.title, review_path(review) %></p>
         </div>
     <% end %>
