--- a/BetterThanTelly/app/views/reviews/new.html.erb
+++ b/BetterThanTelly/app/views/reviews/new.html.erb
@@ -1,54 +1,56 @@
 
 <div class = "flex-container">
-<h1>Write a review</h1>
+  <div class ="col-12">
+    <h1>Write a review</h1>
+  </div>
 </div>
 
 <% if !logged_in? %>
 <div class = "flex-container">
-Please <%= link_to "log in", login_path %> to create an event
+<h2>Please <%= link_to "log in", login_path %> to create an event</h2>
 </div>
 <% else %>
 
 <% if @user.get_past_events == []  %>
 <div class = "flex-container">
-  <h4>You cannot write a review without attending any events!</h4>
+  <div class="block-container">
+    <h2>You cannot write a review without attending any <%= link_to "events", events_path %>!</h2>
+  </div>
 </div>
 <% else %>
 
 <div class="flex-container">
-    <%= form_for(@review) do |f| %>
-    <%= f.hidden_field :user_id, :value=> session[:user_id] %>
-       <p><%=f.label :event_id %></p>
+  <div class="block-container">
+      <%= form_for(@review) do |f| %>
+      <%= f.hidden_field :user_id, :value=> session[:user_id] %>
+        <h4><%=f.label :event_id %></h4>
 
-        <%=f.collection_select :event_id, @user.get_past_events, :id, :title %>
+          <%=f.collection_select :event_id, @user.get_past_events, :id, :title %>
 
-       <p> <%= f.label :title %></p>
-        <%= f.text_field :title %>  
+        <h4> <%= f.label :title %></h4>
+          <%= f.text_field :title %>  
 
-       <p><%= f.label :content %> </p>
-        <%= f.text_area :content %>  
+        <h4><%= f.label :content %> </h4>
+          <%= f.text_area :content %>  
 
-      <p> <%= f.label :rating %> </p> 
-        <%= f.select :rating, @rating_range %>
-         
-    <p><%= f.submit %></p>
-</div>    
-  <% end %>
-
-<% end %>
-
-  
-<% end %>
-  
-
-    <% flash.each do |name, messages| %>
-  <div class="flash-errors">
-
-  
-  <% messages.each do |message| %>
-    <%= message %>
-  <% end %>
-  </ul>
-
+        <h4> <%= f.label :rating %> </h4> 
+          <%= f.select :rating, @rating_range %>
+          
+      <p><%= f.submit %></p>
+    <% end %>
+    <% end %>
   </div>
+
+ <% flash.each do |name, messages| %>
+      <div class="flash-warnings">
+      <% messages.each do |message| %>
+       <p> <%= message %> </p>
+      <% end %>
+      </div>
+    <% end %>
+
+</div> 
 <% end %>
+
+
+   
