--- a/BetterThanTelly/app/views/venues/new.html.erb
+++ b/BetterThanTelly/app/views/venues/new.html.erb
@@ -4,26 +4,26 @@
   </div>
 </div>
 
+
 <div class="flex-container">
-<%= form_for(@venue) do |f| %>
-    <p><%= f.label :name %>
-    <%= f.text_field :name  %> </p>
 
-    <p><%= f.label :address %>
-    <%= f.text_field :address %></p>
+  <div class="block-container">
+    <%= form_for(@venue) do |f| %>
+        <h4><%= f.label :name %> </h4>
+        <%= f.text_field :name  %> 
 
-    <%= f.submit %>
-<% end %>
+        <h4><%= f.label :address %></h4>
+        <%= f.text_field :address %>
+        <br><br>
+        <%= f.submit %>
+    <% end %>
+</div>
 
-  
-  <% flash.each do |name, messages| %>
-  <div class="flash-errors">
 
-  <ul>
-  <% messages.each do |message| %>
-    <li><%= message %></li>
-  <% end %>
-  </ul>
-
-  </div>
-<% end %>
+ <% flash.each do |name, messages| %>
+     <div class="flash-warnings">    
+       <% messages.each do |message| %>
+        <h4>  <%= message %> </h4>
+       <% end %>
+      </div>
+      <% end %>
